shaku_derive/tests/ui/unknown_module_attribute.stderr
error: Unknown attribute
  --> $DIR/unknown_module_attribute.rs:12:23
   |
12 |         components = [#[unknown] ComponentImpl],
   |                       ^
